# pipeforge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pipeforge/: __init__.py  analyzer.py  cli.py  models.py  validator.py
pipeforge/generators/: __init__.py  base.py  docker.py  github_actions.py  gitlab_ci.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_docker.py  test_github_actions.py  test_gitlab_ci.py  test_validator.py
